--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Controllers\ChapterController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PlayerController.cs" />
+    <Compile Include="Controllers\SkillsController.cs" />
     <Compile Include="Controllers\SkillStatsController.cs" />
     <Compile Include="Controllers\StatsController.cs" />
     <Compile Include="DataManagement\ChapterManager.cs" />
@@ -232,6 +233,7 @@
     <Content Include="Views\SkillStats\Delete.cshtml" />
     <Content Include="Views\SkillStats\Create.cshtml" />
     <Content Include="Views\SkillStats\AddXP.cshtml" />
+    <Content Include="Views\Skills\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
