--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -234,6 +234,7 @@
     <Content Include="Views\SkillStats\Create.cshtml" />
     <Content Include="Views\SkillStats\AddXP.cshtml" />
     <Content Include="Views\Skills\Index.cshtml" />
+    <Content Include="Views\Skills\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
