--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -235,6 +235,7 @@
     <Content Include="Views\SkillStats\AddXP.cshtml" />
     <Content Include="Views\Skills\Index.cshtml" />
     <Content Include="Views\Skills\Details.cshtml" />
+    <Content Include="Views\Skills\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
