--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -236,6 +236,7 @@
     <Content Include="Views\Skills\Index.cshtml" />
     <Content Include="Views\Skills\Details.cshtml" />
     <Content Include="Views\Skills\Edit.cshtml" />
+    <Content Include="Views\Skills\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
