Added Login Tokens, and implemented the profile

--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Models\SkillStats.cs" />
     <Compile Include="Models\Stats.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserLogin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -243,6 +244,8 @@
     <Content Include="Views\Skills\Delete.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Account\UpdateProfile.cshtml" />
+    <Content Include="Views\Account\Profile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
