--- a/Manager/Web.config
+++ b/Manager/Web.config
@@ -14,7 +14,9 @@
     <add connectionString="Server=(localdb)\mssqllocaldb; Application Name=Player Manager; Database=aotxgmr; Trusted_Connection=True; Integrated Security=true;" name="Development" />
   </connectionStrings>
   <system.web>
-    <authentication mode="Forms"></authentication>
+    <authentication mode="Forms">
+      <forms loginUrl="/Account/Login"></forms>
+    </authentication>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
