--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="ManagerAttributes\OwnerOnly.cs" />
     <Compile Include="Models\CalcStats.cs" />
     <Compile Include="Models\Chapter.cs" />
     <Compile Include="Models\enums.cs" />
@@ -173,6 +174,7 @@
     <Compile Include="Models\Skill.cs" />
     <Compile Include="Models\SkillStats.cs" />
     <Compile Include="Models\Stats.cs" />
+    <Compile Include="Models\Token.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserLogin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
