Changed the pofile so that it redirects to stroy instead of players. and story was setup to redirect to players

--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -257,6 +257,7 @@
     <Content Include="Views\Story\Create.cshtml" />
     <Content Include="Views\Story\Edit.cshtml" />
     <Content Include="Views\Story\Delete.cshtml" />
+    <Content Include="Views\Story\MyIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
